--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "weather_app",
   "version": "1.0.0",
+  "repository": {
+    "name": "project name",
+    "version": "1.0.0",
+    "repository": {
+      "url": "git+https://github.com/JoeyDevelop/weather_app.git"
+    }
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +22,7 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.8.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
